--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 flask==3.0.2
 Flask-Cors==4.0.0
 gensim==4.3.2
+gunicorn==22.0.0
 idna==3.6
 importlib-metadata==7.1.0
 itsdangerous==2.1.2
@@ -14,6 +15,7 @@ joblib==1.3.2
 MarkupSafe==2.1.5
 nltk==3.8.1
 numpy==1.24.4
+packaging==24.0
 pandas==2.0.3
 pypdf==4.1.0
 pypdf2==3.0.1
